--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color #ccc;
+  background-color #cccc;
   font:sans-serif;
 }
 
@@ -9,5 +9,5 @@ h1 {
 
 article {
   font-style: italic
-  color: #666;
+  color: #6666;
 }
