--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
-  background-color #ccc;
-  font: sans-serif;
+  background-color: #fff;
+  font-style: sans-serif;
 }
 
 h1 {
@@ -8,6 +8,6 @@ h1 {
 }
 
 article {
-  font-style: italic
+  font-style: italic;
   color: #666;
 }
